--- a/main.html
+++ b/main.html
@@ -8,12 +8,13 @@
   </head>
   <body>
     <main>
-      <!-- html markup here -->
-      <p id="ptag">
-        Hello World
-      </p>
-      <button>Swap</button>
-    </main>
+    <div id="app" class="day">
+    <p id="ptag">
+      I am an AccioJob student, ready to become an awesome full stack developer.
+    </p>
+    <button id="swap" class="button_day" onclick="swapTheme()">Swap</button>
+  </div>
+  </main>
     <script src="./script.js"></script>
   </body>
 </html>
